fix controllers + gitignore + routes + composer + bootstrap + queryBuilder

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "App\\": "app/",
             "Core\\": "core/"
         }
+    },
+    "require": {
+        "twig/twig": "^3.0"
     }
 }
