--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "fakerphp/faker": "^1.23"
     }
 }
